--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "install-deps:webpack": "cd webpack && (yarn install --no-progress || yarn install --no-progress)"
   },
   "dependencies": {
+    "element-react": "^1.4.3",
+    "element-theme-default": "^1.4.10",
     "prop-types": "^15.6.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
