--- a/webpack/.eslintrc
+++ b/webpack/.eslintrc
@@ -3,6 +3,7 @@
   "parser": "babel-eslint",
   "env": {
     "browser": true,
+    "es6": true,
     "node": true
   },
   "plugins": [
@@ -20,6 +21,11 @@
     "jsx-quotes": [1, "prefer-single"],
     "react/jsx-no-undef": 1,
     "react/jsx-uses-react": 1,
-    "react/jsx-uses-vars": 1
+    "react/jsx-uses-vars": 1,
+    "import/extensions": 0,
+    "import/no-unresolved": 0
+  },
+  "settings": {
+    "import/ignore": [".css$","node_modules/*"]
   }
 }
