--- a/webpack/.babelrc
+++ b/webpack/.babelrc
@@ -2,7 +2,8 @@
   "presets": [
     "env",
     "react",
-    "flow"
+    "flow",
+    ["es2015", { "modules": false }]
   ],
   "plugins": ["react-hot-loader/babel"]
 }
