--- a/webpack/.babelrc
+++ b/webpack/.babelrc
@@ -5,5 +5,5 @@
     "flow",
     ["es2015", { "modules": false }]
   ],
-  "plugins": ["react-hot-loader/babel"]
+  "plugins": ["react-hot-loader/babel", "transform-object-rest-spread"]
 }
