--- a/webpack/.babelrc
+++ b/webpack/.babelrc
@@ -5,5 +5,9 @@
     "flow",
     ["es2015", { "modules": false }]
   ],
-  "plugins": ["react-hot-loader/babel", "transform-object-rest-spread"]
+  "plugins": [
+    "react-hot-loader/babel",
+    "transform-object-rest-spread",
+    "transform-class-properties"
+  ]
 }
