--- a/webpack/.eslintrc
+++ b/webpack/.eslintrc
@@ -24,7 +24,11 @@
     "react/jsx-uses-vars": 1,
     "import/extensions": 0,
     "import/no-unresolved": 0,
-    "import/no-extraneous-dependencies": 0
+    "import/no-extraneous-dependencies": 0,
+    "jsx-a11y/anchor-is-valid": [ "error", {
+      "components": [ "Link" ],
+      "specialLink": [ "to" ]
+    }]
   },
   "settings": {
     "import/ignore": [".css$","node_modules/*"]
