--- a/webpack/.eslintrc
+++ b/webpack/.eslintrc
@@ -30,7 +30,8 @@
       "components": [ "Link" ],
       "specialLink": [ "to" ]
     }],
-    "react/forbid-prop-types": ["error", { forbid: ["any"] }]
+    "react/forbid-prop-types": ["error", { forbid: ["any"] }],
+    "jsx-a11y/label-has-for": 0
   },
   "settings": {
     "import/ignore": [".css$","node_modules/*"]
