--- a/webpack/.eslintrc
+++ b/webpack/.eslintrc
@@ -1,6 +1,14 @@
 {
   "extends": "airbnb",
   "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaVersion": 8,
+    "ecmaFeatures": {
+      "experimentalObjectRestSpread": true,
+      "jsx": true
+    },
+    "sourceType": "module"
+  },
   "env": {
     "browser": true,
     "es6": true,
