--- a/webpack/package.json
+++ b/webpack/package.json
@@ -21,7 +21,6 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "case-sensitive-paths-webpack-plugin": "^2.1.1",
-    "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
     "eslint": "^4.11.0",
     "eslint-config-airbnb": "^16.1.0",
@@ -47,6 +46,7 @@
     "underscore-template-loader": "^0.8.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
+    "webpack-cleanup-plugin": "^0.5.1",
     "webpack-dev-server": "^2.9.4",
     "write-file-webpack-plugin": "^4.2.0",
     "yaml-loader": "^0.5.0"
