--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lockr": "^0.8.4",
     "prop-types": "^15.6.0",
     "react": "^16.1.1",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.1.1",
     "react-hot-loader": "^3.1.3",
     "react-redux": "^5.0.6",
