--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
     "element-theme-default": "^1.4.10",
     "lockr": "^0.8.4",
     "prop-types": "^15.6.0",
-    "react": "^16.1.1",
-    "react-addons-css-transition-group": "^15.6.2",
-    "react-dom": "^16.1.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-hot-loader": "^3.1.3",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-form": "^7.2.0",
+    "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0"
   }
 }
