--- a/webpack/.eslintrc
+++ b/webpack/.eslintrc
@@ -40,7 +40,8 @@
     }],
     "react/forbid-prop-types": ["error", { forbid: ["any"] }],
     "jsx-a11y/label-has-for": 0,
-    "camelcase": 0
+    "camelcase": 0,
+    "no-case-declarations": 0
   },
   "settings": {
     "import/ignore": [".css$","node_modules/*"]
