--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "redux": "^3.7.2",
     "redux-form": "^7.2.0",
     "redux-saga": "^0.16.0",
-    "reselect": "^3.0.1"
+    "reselect": "^3.0.1",
+    "redux-devtools-extension": "^2.13.2"
   }
 }
