Исправить использование CPU на 100% в redux-devtools-extension

--- a/webpack/package.json
+++ b/webpack/package.json
@@ -44,9 +44,11 @@
     "stylelint-order": "^0.7.0",
     "stylelint-scss": "^2.1.0",
     "stylelint-webpack-plugin": "^0.9.0",
+    "uglifyjs-webpack-plugin": "^1.2.0",
     "underscore-template-loader": "^0.8.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
+    "webpack-bundle-analyzer": "^2.10.0",
     "webpack-cleanup-plugin": "^0.5.1",
     "webpack-dev-server": "^2.9.4",
     "write-file-webpack-plugin": "^4.2.0",
