--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.5",
     "moment": "^2.20.1",
     "prop-types": "^15.6.0",
+    "quagga": "^0.12.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^3.1.3",
